# BeeSpammer.py

./: .gitignore  EXPLANATION.md  README.md  beemovie.txt  chuy.json  iwannabeadmi  iwannabeadmi.txt  pyproject.toml  requirements.txt  setup.py  spam.txt  spammer.py
.github/workflows/: python-publish.yml
beespammer/: __init__.py  __main__.py  spammer.py
docs/: index.md
